# apply-collector

./: .dockerignore  .env.template  .gitignore  .vercelignore  AUDIT.md  CLAUDE.md  Dockerfile  PERSONALIZATION.md  PROJECT_IMPROVEMENTS.md  README.md  pyproject.toml  render.yaml  requirements.txt  start.sh  target_companies.json  vercel.json
.github/workflows/: ci.yml
api/: index.py
data_collection/: auth.py  config.py  database.py  embedding.py  models.py  run_all.py  run_all_async.py  user_profile.py
data_collection/collectors/: adzuna.py  arbeitnow.py  base.py  bulk_discover.py  cutshort.py  greenhouse.py  greenhouse_async.py  himalayas.py  iimjobs.py  jsearch.py  lever.py  lever_async.py  linkedin.py  remoteok.py  remotive.py  remotive_async.py  slug_discovery.py  wellfound.py  workday.py  yc_jobs.py
docs/superpowers/specs/: 2026-06-30-frontend-modernization-design.md
normalize/: benchmark.py  cli.py  dedup.py
scripts/: backfill_embeddings.py  migrate_global_pool.sql
tests/: conftest.py  test_api.py  test_database.py  test_models.py
tests/collectors/: test_greenhouse.py  test_remotive.py
web/: app.py
web/dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  start.sh  tailwind.config.js  vite.config.ts  vitest.config.ts
web/dashboard/src/: App.tsx  index.css
web/dashboard/src/__tests__/: Badge.test.tsx  Button.test.tsx  Input.test.tsx  sourceMeta.test.ts  utils.test.ts
web/dashboard/src/components/: ErrorBoundary.tsx  NavHeader.tsx  PageTransition.tsx  PipelineControls.tsx  (+10 more)
web/templates/: dashboard_react.html
(+23 files in other folders)
