[project]
name = "apply-collector"
version = "0.1.0"
description = "Job collection and normalization pipeline — Stage 1 (collect) + Stage 2 (dedup)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "feedparser>=6.0,<7",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "playwright>=1.40,<2",
    "pydantic>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "psycopg2-binary>=2.9,<3",
    "supabase>=2.0,<3",
    "flask>=3.0,<4",
    "pyjwt>=2.9,<3",
    "sentence-transformers>=3.0,<6",
    "pgvector>=0.3,<1",
    "tenacity>=8.0,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.3,<1",
    "mypy>=1.8,<2",
]

[tool.setuptools.packages.find]
include = ["data_collection*", "normalize*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
